[package]
name = "codegreen-core"
version = "0.1.0"
edition = "2021"
description = "Core measurement engine and orchestration layer for Codegreen"
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
hardware-plugins = { path = "../packages/hardware-plugins" }
language-adapters = { path = "../packages/language-adapters" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.8" 