[package]
name = "codegreen-core"
version = "0.1.0"
edition = "2021"
description = "Core measurement engine and orchestration layer for Codegreen"
license = "MIT"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
hardware-plugins = { path = "../packages/hardware-plugins" }
language-adapters = { path = "../packages/language-adapters" }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.8" 